--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,7 +64,12 @@ p {
     border: none;
     height: 43px;
     width: 120px;
-    font-weight: bold;
+    font-weight: normal;
+}
+
+.research_input::placeholder{
+    color: black ; 
+    opacity: 1;
 }
 
 .button {
@@ -84,18 +89,56 @@ p {
 #location {
     width: 9px;
     height: 10px;
-    border-radius: 7px 0 0 7px;
-    background-color: #d3d3d3;
+    border: grey;
+    border-radius: 9px 0 0 9px;
+    background-color: grey ;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 17px;
+    font-size: 12px;
+}
 
+.container i{
+    background-color: #ffffff;
+    border-radius: 100%;
+    height: 10px;
+    width: 10ox;
+    align-items: center;
+    justify-content: center;
+    margin: -2px;
+    color: #0065FC;
+    margin-right: 14px;
+}
 
+.container div {
+    display: flex;
+    justify-content: row;
+    font-size: 15px;
+    align-items: center;
+    margin-right: 22px;
+    border: 2px solid gray;
+    border-radius: 20px;
+    margin: 15px;
+    transition-duration: 0.1s;
+    cursor: default;
+    padding: 10px;
+    font-weight: bold;
+}
 
+.container div:hover {
+   background-color: #0065fc;
+}
 
+.infos p {
+    display: initial;
+}
 
-
-
-
-
-
+a {
+    position: relative;
+    top: 5px;
+}
 
