--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,11 @@
 body{
     font-family:'Raleway', sans-serif;
-    padding-top: Opx;
+    padding-top: 0px;
     margin-top: 5px;
     margin-left: 25px;
     margin-right: 15px;
 }
-
+/***Header***/
 .logo{
     height: 50px;
     width: 50px;
@@ -54,13 +54,13 @@ body{
 
 H1 {
     font-size: 15px;
-    font-weight: heavy;
+    font-weight: bold;
 }
 
 p {
     font-size: 10px;
 }
-
+/***formulaire***/
 .research_input {
     border: none;
     height: 43px;
@@ -107,7 +107,7 @@ p {
     background-color: #ffffff;
     border-radius: 100%;
     height: 10px;
-    width: 10ox;
+    width: 10px;
     align-items: center;
     justify-content: center;
     margin: -2px;
@@ -117,7 +117,6 @@ p {
 
 .container div {
     display: flex;
-    justify-content: row;
     font-size: 15px;
     align-items: center;
     margin-right: 22px;
@@ -129,7 +128,7 @@ p {
     padding: 10px;
     font-weight: bold;
 }
-
+/***Informations***/
 .container div:hover {
    background-color: #0093fcc5;
 }
@@ -142,7 +141,7 @@ a {
     position: relative;
     top: 5px;
 }
-
+/***Cards hébergements à Marseille***/
 .card_1 {
     height: 200px;
     width: 175px;
@@ -168,10 +167,9 @@ article {
 .h3 {
     display: flex;
     justify-content: flex-start;
-    align-items: top;
 }
 
-img {
+.canebiere {
     border-radius: 8px 8px  8px 8px;
     width: 183px;
     height: 120px;
@@ -183,3 +181,54 @@ a{
     position: relative;
     top: 1px;
 }
+
+.card_2 {
+    height: 200px;
+    width: 175px;
+    background-color :white;
+    box-shadow: 0 4px 8px 0;
+    border-radius: 11px 11px 11px 11px;
+    margin: 0px;
+    padding: 10px;
+}
+
+.card_3 {
+    height: 200px;
+    width: 175px;
+    background-color :white;
+    box-shadow: 0 4px 8px 0;
+    border-radius: 11px 11px 11px 11px;
+    margin: 0px;
+    padding: 10px;
+}
+
+.card_4 {
+    height: 200px;
+    width: 175px;
+    background-color :white;
+    box-shadow: 0 4px 8px 0;
+    border-radius: 11px 11px 11px 11px;
+    margin: 0px;
+    padding: 10px;
+}
+
+.card_5 {
+    height: 200px;
+    width: 175px;
+    background-color :white;
+    box-shadow: 0 4px 8px 0;
+    border-radius: 11px 11px 11px 11px;
+    margin: 0px;
+    padding: 10px;
+}
+
+.card_6 {
+    height: 200px;
+    width: 175px;
+    background-color :white;
+    box-shadow: 0 4px 8px 0;
+    border-radius: 11px 11px 11px 11px;
+    margin: 0px;
+    padding: 10px;
+}
+
