--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,7 @@ a {
 
 article {
     display: block;
+    flex-wrap: wrap;
 }
 
 #marseille {
@@ -169,7 +170,7 @@ article {
     justify-content: flex-start;
 }
 
-.canebiere {
+article img {
     border-radius: 8px 8px  8px 8px;
     width: 183px;
     height: 120px;
