--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,19 +17,14 @@ body{
     align-items: center;
 }
 
-#hebergements {
+.hebergements {
     display: flex;
     width: 50%;
     align-items: flex-end;
     justify-content: center;
 }
 
-#hebergements-activites {
-    display: flex;
-    width: 30%;
-}
-
-#activites {
+.activites {
     display: flex;
     width: 50%;
     align-items: flex-end;
@@ -142,34 +137,34 @@ a {
     top: 5px;
 }
 /***Cards hébergements à Marseille***/
-.card_1 {
+
+div {
+    display: inline;
+}
+.card {
     height: 200px;
     width: 175px;
     background-color :white;
     box-shadow: 0 4px 8px 0;
     border-radius: 11px 11px 11px 11px;
-    margin: 0px;
+    margin-top: 10px;
     padding: 10px;
 }
 
-article {
-    display: block;
-    flex-wrap: wrap;
-}
-
-#marseille {
+.container_hebergements {
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: 200px 200px;
+    gap: 30px;
     border-radius: 8px 8px 8px 8px;
     background-color: #e6e6e5;
-    margin-top: 30px;
-    padding: 30px;
-    padding-left: 20px;
 }
 
-.h3 {
+.h2 {
     display: flex;
+    align-content: flex-start;
     justify-content: flex-start;
 }
-
 article img {
     border-radius: 8px 8px  8px 8px;
     width: 183px;
@@ -178,58 +173,10 @@ article img {
     margin: -4px;
     object-fit: cover;
 }
+
 a{
     position: relative;
     top: 1px;
 }
 
-.card_2 {
-    height: 200px;
-    width: 175px;
-    background-color :white;
-    box-shadow: 0 4px 8px 0;
-    border-radius: 11px 11px 11px 11px;
-    margin: 0px;
-    padding: 10px;
-}
-
-.card_3 {
-    height: 200px;
-    width: 175px;
-    background-color :white;
-    box-shadow: 0 4px 8px 0;
-    border-radius: 11px 11px 11px 11px;
-    margin: 0px;
-    padding: 10px;
-}
-
-.card_4 {
-    height: 200px;
-    width: 175px;
-    background-color :white;
-    box-shadow: 0 4px 8px 0;
-    border-radius: 11px 11px 11px 11px;
-    margin: 0px;
-    padding: 10px;
-}
-
-.card_5 {
-    height: 200px;
-    width: 175px;
-    background-color :white;
-    box-shadow: 0 4px 8px 0;
-    border-radius: 11px 11px 11px 11px;
-    margin: 0px;
-    padding: 10px;
-}
-
-.card_6 {
-    height: 200px;
-    width: 175px;
-    background-color :white;
-    box-shadow: 0 4px 8px 0;
-    border-radius: 11px 11px 11px 11px;
-    margin: 0px;
-    padding: 10px;
-}
 
