--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,52 +1,78 @@
-body{
+/***police***/
+
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");  
+
+
+@font-face {        
+ 
+  font-family: "Raleway";
+  src: url();
+}
+
+/***Snippet for box-sizing prefixes***/
+
+ *{  
+    box-sizing: border-box;
+    /* Opera/IE 8+ */
+    -moz-box-sizing: border-box;
+    /* Firefox, others Gecko */
+    -webkit-box-sizing: border-box;
+    /* Safari/Chrome, others WebKit */
+}
+/***root***/
+
+:root {                       
+
+    --white: white;
+    --blue: #0065FC;
+    --light_blue: #DEEBFF;
+    --grey: #F2F2F2;
+    --grey-border: #D9D9D9;
+    --box-shadow: #0000002e;
+  }
+
+  body{
     font-family:'Raleway', sans-serif;
     padding-top: 0px;
     margin-top: 5px;
     margin-left: 25px;
     margin-right: 15px;
 }
+
 /***Header***/
-.logo{
-    height: 50px;
-    width: 50px;
+
+.logo {
+    height: 19px;
+    width: 61px;
+    margin-left: 35px;
+    margin-top: 44px;
 }
-.nav {
-    height: 74px;
+
+.container_header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
 }
 
-.hebergements {
-    display: flex;
-    width: 50%;
-    align-items: flex-end;
-    justify-content: center;
-}
-
-.activites {
-    display: flex;
-    width: 50%;
-    align-items: flex-end;
-    justify-content: center;
-}
-
-
-.link_1:hover{
-    border-top: #0080ff 2px solid;
-   }
-
 .link_1 {
-    color: #000000;
+    list-style-type: none;
     text-decoration: none;
-    
+    font-size: medium;
+}
+
+.link_1 :hover{
+    border-top: 2px solid #0065FC ;
+    padding-top: 43px;
 }
 
 .link_2 {
+    list-style-type: none;
+    color: #000000;
     text-decoration: none;
-    
+    font-size: medium;
 }
 
+/**titre 1**/
 H1 {
     font-size: 15px;
     font-weight: bold;
@@ -56,15 +82,22 @@ p {
     font-size: 10px;
 }
 /***formulaire***/
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
 .research_input {
     border: none;
     height: 43px;
-    width: 120px;
+    width: 143px;
     font-weight: normal;
 }
 
 .research_input::placeholder{
-    color: black ; 
+    color: black ;
+    font-weight: bold;
     opacity: 1;
 }
 
@@ -78,17 +111,21 @@ p {
     height: 33px;
 }
 
-#research_glass {
+#location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 33px;
+    border-radius: 8px 0 0 8px;
+    background-color: #F2F2F2;
+}
+
+.research_glass {
     display: none;
 }
 
-#location {
-    width: 9px;
-    height: 10px;
-    border: grey;
-    border-radius: 9px 0 0 9px;
-    background-color: grey ;
-}
+/**filtres**/
 
 .container {
     display: flex;
@@ -99,7 +136,7 @@ p {
 }
 
 .container i{
-    background-color: #ffffff;
+    background-color: #F2F2F2;
     border-radius: 100%;
     height: 10px;
     width: 10px;
@@ -115,17 +152,28 @@ p {
     font-size: 15px;
     align-items: center;
     margin-right: 22px;
-    border: 2px solid gray;
+    border: 1px solid #D2D3D3;
     border-radius: 20px;
     margin: 15px;
     transition-duration: 0.1s;
-    cursor: default;
+    cursor: pointer;
     padding: 10px;
     font-weight: bold;
 }
-/***Informations***/
+
 .container div:hover {
-   background-color: #0093fcc5;
+   background-color: #DEEBFF;
+}
+
+/***Informations***/
+
+.fa-solid.fa-info{
+    color:#0065FC;
+    border-radius: 50px;
+    border: 2px solid #eadddd;
+    margin-right: 8px;
+    padding: 7px 11px 7px 11px;
+    font-size: 14px;
 }
 
 .infos p {
@@ -134,49 +182,71 @@ p {
 
 a {
     position: relative;
-    top: 5px;
+    top: 1px;
 }
-/***Cards hébergements à Marseille***/
 
 div {
     display: inline;
 }
+
+/***Cards hébergements à Marseille***/
+
+
+.section_hebergement {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 20px;
+    background-color: #F2F2F2;
+}
+
 .card {
-    height: 200px;
-    width: 175px;
-    background-color :white;
+    height: 183px;
+    width: 206px;
+    background-color : white;
     box-shadow: 0 4px 8px 0;
     border-radius: 11px 11px 11px 11px;
     margin-top: 10px;
     padding: 10px;
 }
 
-.container_hebergements {
-    display: grid;
-    grid-template-columns: 250px 250px 250px;
-    grid-template-rows: 200px 200px;
-    gap: 30px;
-    border-radius: 8px 8px 8px 8px;
-    background-color: #e6e6e5;
+.title_sectionh2 {
+    font-size: 12px;
 }
 
-.h2 {
-    display: flex;
-    align-content: flex-start;
-    justify-content: flex-start;
+.section1-text {
+    margin-left: 7px;
+    padding-top: 17px;
+    color: black;
+    text-decoration: none;
+    font-size: small;
 }
+
 article img {
-    border-radius: 8px 8px  8px 8px;
-    width: 183px;
+    border-radius: 8px 8px  0px 0px;
+    width: 196px;
     height: 120px;
     padding: 0px;
     margin: -4px;
     object-fit: cover;
 }
 
-a{
-    position: relative;
-    top: 1px;
+.star {
+    font-size: small;
 }
 
+.back_icon {
+    color: #0065FC;
+}
+
+.grey_star{
+    color: #F2F2F2;
+}
+
+.afficher {
+    font-size: 15px;
+    font-weight: bold;
+    color: black;
+    margin-left: 6%;
+    margin-top: -12px;
+}
 
