--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,6 @@
 
 .link_1 {
     list-style-type: none;
-    text-decoration: none;
     font-size: medium;
 }
 
@@ -68,12 +67,15 @@
 .link_2 {
     list-style-type: none;
     color: #000000;
-    text-decoration: none;
     font-size: medium;
 }
 
+a {
+    text-decoration: none;
+}
+
 /**titre 1**/
-H1 {
+h1 {
     font-size: 15px;
     font-weight: bold;
 }
@@ -99,6 +101,7 @@ form {
     color: black ;
     font-weight: bold;
     opacity: 1;
+    font-size: 13px;
 }
 
 .button {
@@ -191,47 +194,65 @@ div {
 
 /***Cards hébergements à Marseille***/
 
-
-.section_hebergement {
-    display: flex;
-    justify-content: space-between;
+.section_hebergements {
+    width: 60%;
+    height: 500px;
     border-radius: 20px;
     background-color: #F2F2F2;
 }
 
+.container_card {
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    gap: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.populaires {
+
+}
 .card {
     height: 183px;
     width: 206px;
     background-color : white;
     box-shadow: 0 4px 8px 0;
+    transition: 0.3s;
     border-radius: 11px 11px 11px 11px;
     margin-top: 10px;
     padding: 10px;
 }
 
-.title_sectionh2 {
-    font-size: 12px;
+h2 {
+    font-size: 16px;
+    margin-top: 20px;
 }
 
-.section1-text {
-    margin-left: 7px;
-    padding-top: 17px;
+article a {
+    margin-left: 2px;
     color: black;
-    text-decoration: none;
+    font-size: small;
+}
+
+h3 {
+    margin-top: 7px;
+    padding-top: 0px;
+    margin-bottom: -6px;
+    padding-bottom: 2px;
     font-size: small;
 }
 
 article img {
     border-radius: 8px 8px  0px 0px;
     width: 196px;
-    height: 120px;
+    height: 103px;
     padding: 0px;
     margin: -4px;
     object-fit: cover;
 }
 
 .star {
-    font-size: small;
+    font-size: 6px;
 }
 
 .back_icon {
@@ -247,6 +268,63 @@ article img {
     font-weight: bold;
     color: black;
     margin-left: 6%;
-    margin-top: -12px;
+    margin-top: 30px;
+}
+
+/**cards populaires**/
+
+section {
+    float: left;
+    width: 40%;
+}
+
+aside {
+    float: right;
+    width: 30%;
+}
+
+.title_populaires {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.fa-chart-line {
+    margin-left: 30px;
+    color: #0065FC;
+}
+
+.populaires {
+    width: 30%;
+    height: 500px;
+    border-radius: 20px;
+    background-color: #F2F2F2;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+.card2 {
+    height: 183px;
+    width: 206px;
+    background-color : white;
+    box-shadow: 0 4px 8px 0;
+    transition: 0.3s;
+    border-radius: 11px 11px 11px 11px;
+    margin-top: 10px;
+    padding: 10px;
+}
+
+aside img {
+    border-radius: 8px 8px  0px 0px;
+    width: 196px;
+    height: 103px;
+    padding: 0px;
+    margin: -4px;
+    object-fit: cover;
+}
+
+.container_aside {
+    display: flex;
+    flex-direction: column;
 }
 
