--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,9 +29,9 @@
     --grey: #F2F2F2;
     --grey-border: #D9D9D9;
     --box-shadow: #0000002e;
-  }
+ }
 
-  body{
+body{
     font-family:'Raleway', sans-serif;
     padding-top: 0px;
     margin-top: 5px;
@@ -48,14 +48,14 @@
     margin-top: 44px;
 }
 
-.container_header {
+nav {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
 }
 
+
 .link_1 {
-    list-style-type: none;
     font-size: medium;
 }
 
@@ -65,7 +65,6 @@
 }
 
 .link_2 {
-    list-style-type: none;
     color: #000000;
     font-size: medium;
 }
@@ -181,6 +180,7 @@ form {
 
 .infos p {
     display: initial;
+    padding-top: 10px;
 }
 
 a {
@@ -195,10 +195,14 @@ div {
 /***Cards hébergements à Marseille***/
 
 .section_hebergements {
-    width: 60%;
-    height: 500px;
+    width: 65%;
+    height: 599px;
     border-radius: 20px;
+    padding: 30px 10px;
     background-color: #F2F2F2;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px;
 }
 
 .container_card {
@@ -209,9 +213,6 @@ div {
     margin-right: 30px;
 }
 
-.populaires {
-
-}
 .card {
     height: 183px;
     width: 206px;
@@ -226,17 +227,17 @@ div {
 h2 {
     font-size: 16px;
     margin-top: 20px;
+    padding-left: 20px;
 }
 
 article a {
-    margin-left: 2px;
     color: black;
     font-size: small;
 }
 
 h3 {
     margin-top: 7px;
-    padding-top: 0px;
+    padding-top: 7px;
     margin-bottom: -6px;
     padding-bottom: 2px;
     font-size: small;
@@ -273,15 +274,6 @@ article img {
 
 /**cards populaires**/
 
-section {
-    float: left;
-    width: 40%;
-}
-
-aside {
-    float: right;
-    width: 30%;
-}
 
 .title_populaires {
     display: flex;
@@ -295,36 +287,44 @@ aside {
     color: #0065FC;
 }
 
-.populaires {
-    width: 30%;
-    height: 500px;
-    border-radius: 20px;
-    background-color: #F2F2F2;
-    margin-left: 10px;
-    padding-left: 10px;
+.title_img_card2{
+    display: flex;
 }
+.populaires {
+    background-color: #F2F2F2;
+    width: 20%;
+    height: 599px;
+    border-radius: 15px;
+    display: inline-block;
+    vertical-align: top;
+}
+
 .card2 {
-    height: 183px;
-    width: 206px;
+    height: 157px;
     background-color : white;
-    box-shadow: 0 4px 8px 0;
+    box-shadow: 0 7px 7px 0 black;
     transition: 0.3s;
-    border-radius: 11px 11px 11px 11px;
-    margin-top: 10px;
-    padding: 10px;
+    border-radius: 20px;
+    margin: 13px;
+    padding: 3px;
 }
 
 aside img {
-    border-radius: 8px 8px  0px 0px;
-    width: 196px;
-    height: 103px;
-    padding: 0px;
-    margin: -4px;
+    border-top-left-radius: 18px;
+    border-bottom-left-radius: 18px;
+    width: 40%;
+    height: 154px;
+    display: inline-block;
     object-fit: cover;
+    display: flex;
 }
 
-.container_aside {
-    display: flex;
-    flex-direction: column;
+.info_card2{
+    display: inline-block;
+    vertical-align: top;
+    color: black;
+    font-weight: bold;
+    margin-left: 7px;
+    font-size: 13px;
 }
 
