--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,9 +44,9 @@ body{
 .logo {
     display: inline-block;
     height: 19px;
-    width: 100px;
-    margin-left: 35px;
-    margin-top: 44px;
+    width: 84px;
+    margin-left: 25px;
+    margin-top: -14px;
 }
 
 .container_header {
@@ -55,23 +55,22 @@ body{
     justify-content: space-between;
     align-items: center;
     margin-top: 23px;
-    width: 900px;
+    width: 95%;
 }
-
 nav {
     display: inline-block;
     margin: 0;
 }
-
 nav ul {
     list-style-type: none;
-}
-
-nav li {
-    display: inline;
+    flex-direction: row;
     align-items: center;
 }
 
+nav li {
+    display: inline-block;
+    justify-content: space-between;
+}
 
 .link_1 {
     font-size: 14px;
@@ -85,6 +84,7 @@ nav li {
 .link_2 {
     color: #000000;
     font-size: 14px;
+    padding-left: 20px;
 }
 
 a {
@@ -220,7 +220,8 @@ div {
     background-color: #F2F2F2;
     display: inline-block;
     vertical-align: top;
-    margin-right: 20px;
+    margin-right : 20px;
+    margin-top: 30px;
 }
 
 .container_card {
@@ -238,7 +239,7 @@ div {
     box-shadow: 0 4px 8px 0;
     transition: 0.3s;
     border-radius: 11px 11px 11px 11px;
-    margin-top: 10px;
+    margin: 10px;
     padding: 10px;
 }
 
@@ -302,26 +303,28 @@ article img {
 
 .fa-chart-line {
     color: #0065FC;
-    padding-left: 30px;
+    margin-left: 50px;
 }
 
 
 .populaires {
     background-color: #F2F2F2;
-    width: 20%;
+    width: 28%;
     height: 599px;
     border-radius: 15px;
     display: inline-block;
     vertical-align: top;
+    margin-top: 30px;
 }
 
 .card2 {
     height: 157px;
+    width: 85%;
     background-color : white;
     box-shadow: 0 7px 7px 0 black;
     transition: 0.3s;
     border-radius: 20px;
-    margin: 13px;
+    margin: 15px auto;
     padding: 3px;
 }
 
@@ -342,18 +345,92 @@ aside img {
 .info_card2 h3{
     margin-top: -132px;
     padding-top: 7px;
-    margin-left: 78px;
+    margin-left: 110px;
     padding-left: 10px;
     font-size: small;
 }
 
 .info_card2 p {
-    margin-left: 78px;
+    margin-left: 110px;
     padding-left: 10px;
 }
 
 .star_populaires p{
-    margin-left: 78px;
+    margin-left: 110px;
     padding-left: 10px;
     padding-top: 40px;
 }
+
+/***Activités à Marseille**/
+
+.main.activites{
+    margin-top: 188px;
+}
+
+.activites_a_marseille {
+    margin-left: 3%;
+    font-size: 21px;
+}
+
+.images {
+    display: flex;
+    font-size: small;
+}
+
+.main_activites h2 {
+    margin-top: 40px;
+}
+
+.images .img_h3 img {
+    width: 102%;
+    height: 330px;
+    object-fit: cover;
+    border-radius: 25px 25px 0px 0px;
+}
+
+.img_h3 {
+    height: 382px;
+    width: 261px;
+    background-color : white;
+    box-shadow: 0 0 10px 10px #0000002e;
+    transition: 0.3s;
+    border-radius: 25px;
+    margin-top: 10px;
+    padding:0;
+    margin: 15px;
+}
+
+/***footer***/
+
+footer {
+    background-color: #F2F2F2;
+    width: 95%;
+    margin-top: 50px;
+}
+
+.footer_container {
+    display: flex;
+    max-width: 100%;
+    margin: auto;
+    padding: 0 25px;
+    box-sizing: border-box;
+}
+
+.footer_colonnes {
+    padding: 10px 15px;
+    flex: auto;
+    color: black;
+}
+
+footer ul {
+    display: block;
+}
+
+ul {
+    list-style-type: none;
+    color: black;
+    padding: 18px;
+    margin-top: 5px;
+}
+
+
