--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,21 +32,19 @@
  }
 
 body{
-    font-family:'Raleway', sans-serif;
-    padding-top: 0px;
-    margin-top: 5px;
-    margin-left: 25px;
-    margin-right: 15px;
+    font-family: 'Raleway', sans-serif;
+    margin: 17px auto;
+    padding: 30px;
+    max-width: 1400px;
+    line-height: 1.25;
 }
 
 /***Header***/
 
 .logo {
     display: inline-block;
-    height: 19px;
-    width: 84px;
-    margin-left: 25px;
-    margin-top: -14px;
+    height: 18px;
+    width: 80px;
 }
 
 .container_header {
@@ -54,16 +52,17 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 23px;
     width: 95%;
 }
+
 nav {
     display: inline-block;
-    margin: 0;
 }
+
 nav ul {
     list-style-type: none;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -128,7 +127,8 @@ form {
     border-bottom-right-radius: 9px;
     border: none;
     width: 100px;
-    height: 33px;
+    height: 35px;
+    font-size: 14px;
 }
 
 #location {
@@ -136,12 +136,12 @@ form {
     justify-content: center;
     align-items: center;
     width: 45px;
-    height: 33px;
+    height: 35px;
     border-radius: 8px 0 0 8px;
     background-color: #F2F2F2;
 }
 
-.research_glass {
+.fa-magnifying-glass{
     display: none;
 }
 
@@ -151,7 +151,6 @@ form {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 17px;
     font-size: 12px;
 }
 
@@ -201,11 +200,6 @@ form {
     padding-top: 10px;
 }
 
-a {
-    position: relative;
-    top: 1px;
-}
-
 div {
     display: inline;
 }
@@ -245,8 +239,11 @@ div {
 
 h2 {
     font-size: 16px;
-    margin-top: 20px;
-    padding-left: 20px;
+}
+
+.section1_part1 h2 {
+    margin-left: 36px;
+    margin-top: 1px;
 }
 
 article a {
@@ -262,7 +259,7 @@ h3 {
     font-size: small;
 }
 
-article img {
+.card img {
     border-radius: 8px 8px  0px 0px;
     width: 196px;
     height: 103px;
@@ -287,8 +284,12 @@ article img {
     font-size: 15px;
     font-weight: bold;
     color: black;
-    margin-left: 6%;
+    margin-left: 36px;
     margin-top: 30px;
+}
+
+.section1_text p {
+    font-size: 10px;
 }
 
 /**cards populaires**/
@@ -304,8 +305,13 @@ article img {
 .fa-chart-line {
     color: #0065FC;
     margin-left: 50px;
+    padding-left: 70px;
 }
 
+.populaires h2 {
+    margin-left: 16px;
+    margin-top: 14px;
+}
 
 .populaires {
     background-color: #F2F2F2;
@@ -353,6 +359,7 @@ aside img {
 .info_card2 p {
     margin-left: 110px;
     padding-left: 10px;
+    font-weight: 100;
 }
 
 .star_populaires p{
@@ -379,10 +386,11 @@ aside img {
 
 .main_activites h2 {
     margin-top: 40px;
+    padding-left: 10px;
 }
 
 .images .img_h3 img {
-    width: 102%;
+    width: 100%;
     height: 330px;
     object-fit: cover;
     border-radius: 25px 25px 0px 0px;
@@ -400,11 +408,16 @@ aside img {
     margin: 15px;
 }
 
+.img_h3 h3 {
+    margin-left: 10px;
+}
+
 /***footer***/
 
 footer {
     background-color: #F2F2F2;
     width: 95%;
+    height: 200px;
     margin-top: 50px;
 }
 
@@ -417,7 +430,7 @@ footer {
 }
 
 .footer_colonnes {
-    padding: 10px 15px;
+    padding: 21px 26px;
     flex: auto;
     color: black;
 }
@@ -429,8 +442,25 @@ footer ul {
 ul {
     list-style-type: none;
     color: black;
-    padding: 18px;
-    margin-top: 5px;
+    padding: 0;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+footer h2 {
+    font-size: 13px;
+}
+
+footer a {
+    color: black;
+}
+
+footer li {
+    color: black;
+    font-size: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
 }
 
 
