--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,35 +55,22 @@ body{
     width: 95%;
 }
 
-nav {
-    display: inline-block;
-}
-
 nav ul {
-    list-style-type: none;
+    display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    list-style-type: none;
 }
-
-nav li {
-    display: inline-block;
-    justify-content: space-between;
+  
+nav ul li a {
+    padding: 60px 50px 20px 67px;
+    font-weight: 400;
+    color: inherit;
+    text-decoration: none;
 }
-
-.link_1 {
-    font-size: 14px;
-}
-
-.link_1:hover{
-    border-top: 2px solid #0065FC ;
-    padding-top: 23px;
-}
-
-.link_2 {
-    color: #000000;
-    font-size: 14px;
-    padding-left: 20px;
+  
+nav ul li a:hover {
+    border-top: 3px solid var(--blue);
+    color: var(--blue);
 }
 
 a {
@@ -92,12 +79,12 @@ a {
 
 /**titre 1**/
 h1 {
-    font-size: 15px;
+    font-size: 22px;
     font-weight: bold;
 }
 
-p {
-    font-size: 10px;
+header p{
+    font-size: 16px;
 }
 /***formulaire***/
 
@@ -108,9 +95,10 @@ form {
 }
 .research_input {
     border: none;
-    height: 43px;
-    width: 143px;
+    height: 49px;
+    width: 154px;
     font-weight: normal;
+    border-radius: 15px;
 }
 
 .research_input::placeholder{
@@ -123,8 +111,7 @@ form {
 .button {
     background-color: #0065FC;
     color: #ffffff;
-    border-top-right-radius: 9px;
-    border-bottom-right-radius: 9px;
+    border-radius: 0px 15px 15px 0;
     border: none;
     width: 100px;
     height: 35px;
@@ -135,9 +122,9 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 45px;
+    width: 50px;
     height: 35px;
-    border-radius: 8px 0 0 8px;
+    border-radius: 15px 0 0 15px;
     background-color: #F2F2F2;
 }
 
@@ -200,39 +187,53 @@ form {
     padding-top: 10px;
 }
 
-div {
+.infos {
     display: inline;
 }
 
 /***Cards hébergements à Marseille***/
 
+.container_section_aside section aside{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.container_section_aside {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
 .section_hebergements {
     width: 65%;
-    height: 599px;
+    height: 610px;
     border-radius: 20px;
     padding: 30px 10px;
     background-color: #F2F2F2;
-    display: inline-block;
     vertical-align: top;
     margin-right : 20px;
     margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.container_card {
-    display: grid;
-    grid-template-columns: 200px 200px 200px;
-    gap: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+.section_hebergements .container_card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .card {
+    display: flex;
     height: 183px;
     width: 206px;
     background-color : white;
     box-shadow: 0 4px 8px 0;
     transition: 0.3s;
-    border-radius: 11px 11px 11px 11px;
+    border-radius: 15px 15px 15px 15px;
     margin: 10px;
     padding: 10px;
 }
@@ -242,7 +243,7 @@ h2 {
 }
 
 .section1_part1 h2 {
-    margin-left: 36px;
+    margin-left: 15px;
     margin-top: 1px;
 }
 
@@ -251,12 +252,12 @@ article a {
     font-size: small;
 }
 
-h3 {
+.card h3 {
     margin-top: 7px;
     padding-top: 7px;
     margin-bottom: -6px;
     padding-bottom: 2px;
-    font-size: small;
+    font-size: 14;
 }
 
 .card img {
@@ -269,7 +270,7 @@ h3 {
 }
 
 .star {
-    font-size: 6px;
+    font-size: 10px;
 }
 
 .back_icon {
@@ -294,7 +295,9 @@ h3 {
 
 /**cards populaires**/
 
-
+aside {
+    display: flex;
+}
 .title_populaires {
     display: flex;
     align-items: center;
@@ -316,15 +319,17 @@ h3 {
 .populaires {
     background-color: #F2F2F2;
     width: 28%;
-    height: 599px;
+    height: 610px;
     border-radius: 15px;
-    display: inline-block;
     vertical-align: top;
     margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .card2 {
-    height: 157px;
+    height: 143px;
     width: 85%;
     background-color : white;
     box-shadow: 0 7px 7px 0 black;
@@ -337,8 +342,8 @@ h3 {
 aside img {
     border-top-left-radius: 18px;
     border-bottom-left-radius: 18px;
-    width: 40%;
-    height: 154px;
+    width: 114px;
+    height: 138px;
     object-fit: cover;
 }
 
@@ -353,19 +358,21 @@ aside img {
     padding-top: 7px;
     margin-left: 110px;
     padding-left: 10px;
-    font-size: small;
+    font-size: 14px;
 }
 
 .info_card2 p {
     margin-left: 110px;
     padding-left: 10px;
     font-weight: 100;
+    font-size: 10px;
 }
 
 .star_populaires p{
     margin-left: 110px;
     padding-left: 10px;
-    padding-top: 40px;
+    padding-top: 30px;
+    font-size: 10px;
 }
 
 /***Activités à Marseille**/
@@ -397,8 +404,8 @@ aside img {
 }
 
 .img_h3 {
-    height: 382px;
-    width: 261px;
+    height: 386px;
+    width: 255px;
     background-color : white;
     box-shadow: 0 0 10px 10px #0000002e;
     transition: 0.3s;
