--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,6 @@ body{
 /***Header***/
 
 .logo {
-    display: inline-block;
     height: 18px;
     width: 80px;
 }
@@ -55,6 +54,9 @@ body{
     width: 95%;
 }
 
+nav {
+    margin-right: -82px;
+}
 nav ul {
     display: flex;
     flex-direction: row;
@@ -84,7 +86,7 @@ h1 {
 }
 
 header p{
-    font-size: 16px;
+    font-size: 13px;
 }
 /***formulaire***/
 
@@ -116,6 +118,7 @@ form {
     width: 100px;
     height: 35px;
     font-size: 14px;
+    cursor: pointer;
 }
 
 #location {
@@ -184,7 +187,7 @@ form {
 
 .infos p {
     display: initial;
-    padding-top: 10px;
+    padding-top: 8px;
 }
 
 .infos {
@@ -253,10 +256,10 @@ article a {
 }
 
 .card h3 {
-    margin-top: 7px;
-    padding-top: 7px;
-    margin-bottom: -6px;
-    padding-bottom: 2px;
+    margin-top: 2px;
+    padding-top: 3px;
+    margin-bottom: -9px;
+    padding-bottom: 1px;
     font-size: 14;
 }
 
@@ -394,6 +397,7 @@ aside img {
 .main_activites h2 {
     margin-top: 40px;
     padding-left: 10px;
+    margin-bottom: -30px;
 }
 
 .images .img_h3 img {
@@ -412,7 +416,8 @@ aside img {
     border-radius: 25px;
     margin-top: 10px;
     padding:0;
-    margin: 15px;
+    margin: 55px;
+    margin-left: 2px;
 }
 
 .img_h3 h3 {
@@ -423,8 +428,8 @@ aside img {
 
 footer {
     background-color: #F2F2F2;
-    width: 95%;
-    height: 200px;
+    width: 100%;
+    height: 210px;
     margin-top: 50px;
 }
 
@@ -436,7 +441,7 @@ footer {
     box-sizing: border-box;
 }
 
-.footer_colonnes {
+.footer_colums {
     padding: 21px 26px;
     flex: auto;
     color: black;
@@ -446,7 +451,7 @@ footer ul {
     display: block;
 }
 
-ul {
+.footer_colums ul {
     list-style-type: none;
     color: black;
     padding: 0;
@@ -469,5 +474,42 @@ footer li {
     margin-bottom: 10px;
     
 }
+
+/***Responsive_tablettes***/
+
+@media screen and (max-width: 992px) {
+    body {
+        padding-left: 2,5%;
+        padding-right: 2,5%;
+        margin: 70px;
+    }
+
+    .container_section_aside .section_aside{
+        flex-direction: column;
+    }
+
+    .container_section_aside {
+        flex-direction: column;
+    }
+
+    .section_hebergements {
+        width: 100%;
+    }
+
+   .populaires {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+   }
+
+   .card2 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+   }
+
+}
+
 
 
