--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,32 +42,29 @@ body{
 /***Header***/
 
 .logo {
-    height: 18px;
-    width: 80px;
+    height: 24px;
+    width: 77px;
+    object-fit: cover;
 }
 
 .container_header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 95%;
 }
 
-nav {
-    margin-right: -82px;
-}
 nav ul {
     display: flex;
     flex-direction: row;
+}
+
+ul {
     list-style-type: none;
 }
   
 nav ul li a {
     padding: 60px 50px 20px 67px;
     font-weight: 400;
-    color: inherit;
-    text-decoration: none;
 }
   
 nav ul li a:hover {
@@ -77,6 +74,7 @@ nav ul li a:hover {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 /**titre 1**/
@@ -96,11 +94,9 @@ form {
     justify-content: flex-start;
 }
 .research_input {
-    border: none;
-    height: 49px;
-    width: 154px;
+    border: solid 1px var(--grey);
+    padding: 7.7px 10px;
     font-weight: normal;
-    border-radius: 15px;
 }
 
 .research_input::placeholder{
@@ -108,6 +104,7 @@ form {
     font-weight: bold;
     opacity: 1;
     font-size: 13px;
+    margin-left: 10px;
 }
 
 .button {
@@ -196,37 +193,21 @@ form {
 
 /***Cards hébergements à Marseille***/
 
-.container_section_aside section aside{
+.container_section_aside section aside {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .container_section_aside {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
 }
-
 
 .section_hebergements {
-    width: 65%;
-    height: 610px;
-    border-radius: 20px;
-    padding: 30px 10px;
-    background-color: #F2F2F2;
-    vertical-align: top;
-    margin-right : 20px;
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex: 2;
 }
 
-.section_hebergements .container_card{
+.section_hebergements .container_card {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .card {
@@ -298,9 +279,7 @@ article a {
 
 /**cards populaires**/
 
-aside {
-    display: flex;
-}
+
 .title_populaires {
     display: flex;
     align-items: center;
@@ -320,15 +299,7 @@ aside {
 }
 
 .populaires {
-    background-color: #F2F2F2;
-    width: 28%;
-    height: 610px;
-    border-radius: 15px;
-    vertical-align: top;
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex: 1;
 }
 
 .card2 {
@@ -452,7 +423,6 @@ footer ul {
 }
 
 .footer_colums ul {
-    list-style-type: none;
     color: black;
     padding: 0;
     font-size: 13px;
@@ -472,7 +442,6 @@ footer li {
     font-size: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    
 }
 
 /***Responsive_tablette***/
