--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,10 +81,12 @@ a {
 h1 {
     font-size: 22px;
     font-weight: bold;
+    margin-bottom: 7px;
 }
 
 header p{
     font-size: 13px;
+    margin-top: 2px;
 }
 /***formulaire***/
 
@@ -92,6 +94,7 @@ form {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-bottom: 17px;
 }
 .research_input {
     border: solid 1px var(--grey);
@@ -101,14 +104,15 @@ form {
 
 .research_input::placeholder{
     color: black ;
-    font-weight: bold;
+    font-weight: 700;
     opacity: 1;
-    font-size: 13px;
+    font-size: 15px;
+    line-height: 21px;
     margin-left: 10px;
 }
 
 .button {
-    background-color: #0065FC;
+    background-color: var(--blue);
     color: #ffffff;
     border-radius: 0px 15px 15px 0;
     border: none;
@@ -125,7 +129,7 @@ form {
     width: 50px;
     height: 35px;
     border-radius: 15px 0 0 15px;
-    background-color: #F2F2F2;
+    background-color: var(--grey);
 }
 
 .fa-magnifying-glass{
@@ -139,17 +143,18 @@ form {
     align-items: center;
     flex-wrap: wrap;
     font-size: 12px;
+    margin-bottom: 18px;
 }
 
 .container i{
-    background-color: #F2F2F2;
+    background-color: var(--grey);
     border-radius: 100%;
     height: 10px;
     width: 10px;
     align-items: center;
     justify-content: center;
     margin: -2px;
-    color: #0065FC;
+    color: var(--blue);
     margin-right: 14px;
 }
 
@@ -158,7 +163,7 @@ form {
     font-size: 15px;
     align-items: center;
     margin-right: 22px;
-    border: 1px solid #D2D3D3;
+    border: 1px solid var(--grey-border);
     border-radius: 20px;
     margin: 15px;
     transition-duration: 0.1s;
@@ -168,15 +173,15 @@ form {
 }
 
 .container div:hover {
-   background-color: #DEEBFF;
+   background-color: var(--light_blue);
 }
 
 /***Informations***/
 
 .fa-solid.fa-info{
-    color:#0065FC;
+    color: var(--blue);
     border-radius: 50px;
-    border: 2px solid #eadddd;
+    border: 2px solid var(--grey-border);
     margin-right: 8px;
     padding: 7px 11px 7px 11px;
     font-size: 14px;
@@ -196,33 +201,30 @@ form {
 .container_section_aside {
     display: flex;
 }
-.container_section {
-    display: flex;
+
+.title_sectionh2 {
+    margin-left: 16px;
+}
+
+.section_hebergements {
+    flex: 2;
     background-color: var(--grey);
     border-radius: 20px;
     padding: 16px;
-    margin: 36px;
-    margin-left: 0px;
+    margin: 20px 36px 36px 0px;
 }
 
-.title_sectionh2{
-    margin-left: 16px;
-}
-.section_hebergements {
-    flex: 2;
-}
-
-.section_hebergements .container_card {
+.container_card {
     display: flex;
     flex-wrap: wrap;
 }
 
 .card {
     display: flex;
-    background-color : white;
-    box-shadow: 0 4px 8px 0;
+    background-color : var(--white);
+    box-shadow: 0 4px 4px 0 black;
     transition: 0.3s;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 20px;
     margin: 16px auto;
     padding: 10px;
 }
@@ -263,11 +265,11 @@ article a {
 }
 
 .back_icon {
-    color: #0065FC;
+    color: var(--blue);
 }
 
 .grey_star{
-    color: #F2F2F2;
+    color: var(--grey);
 }
 
 .afficher {
@@ -295,17 +297,17 @@ article a {
 }
 
 .fa-chart-line {
-    color: #0065FC;
+    color: var(--blue);
 }
 
 .container_populaires {
     background-color: var(--grey);
     border-radius: 20px;
-    margin: 38px;
+    margin: 20px 0px 38px 38px;
 }
 
 .container_card2 {
-    padding : 0px 40px 30px 40px;
+    padding : 0px 40px 20px 40px;
 }
 
 .populaires {
@@ -315,8 +317,8 @@ article a {
 .card2 {
     height: 143px;
     width: 282px;
-    background-color : white;
-    box-shadow: 0 7px 7px 0 black;
+    background-color : var(--white);
+    box-shadow: 0 4px 4px 0 black;
     transition: 0.3s;
     border-radius: 20px;
     margin: 0px 15px 15px 15px;
@@ -391,10 +393,10 @@ aside img {
 .img_h3 {
     height: 386px;
     width: 255px;
-    background-color : white;
-    box-shadow: 0 0 10px 10px #0000002e;
+    background-color : var(--white);
+    box-shadow: 0 4px 4px 0 var(--grey);
     transition: 0.3s;
-    border-radius: 25px;
+    border-radius: 20px;
     margin-top: 10px;
     padding:0;
     margin: 55px;
@@ -408,7 +410,7 @@ aside img {
 /***footer***/
 
 footer {
-    background-color: #F2F2F2;
+    background-color: var(--grey);
     width: 100%;
     height: 210px;
     margin-top: 50px;
