--- a/CSS/style.css
+++ b/CSS/style.css
@@ -222,7 +222,7 @@ form {
 .card {
     display: flex;
     background-color : var(--white);
-    box-shadow: 0 4px 4px 0 black;
+    box-shadow: 0 4px 4px 0 var(--box-shadow);
     transition: 0.3s;
     border-radius: 20px;
     margin: 16px auto;
@@ -252,7 +252,7 @@ article a {
 }
 
 .card img {
-    border-radius: 8px 8px  0px 0px;
+    border-radius: 20px 20px  0px 0px;
     width: 196px;
     height: 103px;
     padding: 0px;
@@ -318,7 +318,7 @@ article a {
     height: 143px;
     width: 282px;
     background-color : var(--white);
-    box-shadow: 0 4px 4px 0 black;
+    box-shadow: 0 4px 4px 0 var(--box-shadow);
     transition: 0.3s;
     border-radius: 20px;
     margin: 0px 15px 15px 15px;
@@ -326,8 +326,7 @@ article a {
 }
 
 aside img {
-    border-top-left-radius: 18px;
-    border-bottom-left-radius: 18px;
+    border-radius: 20px 0px 0px 20px;
     width: 114px;
     height: 138px;
     object-fit: cover;
@@ -368,7 +367,6 @@ aside img {
 }
 
 .activites_a_marseille {
-    margin-left: 3%;
     font-size: 21px;
 }
 
@@ -387,18 +385,17 @@ aside img {
     width: 100%;
     height: 330px;
     object-fit: cover;
-    border-radius: 25px 25px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 
 .img_h3 {
     height: 386px;
     width: 255px;
     background-color : var(--white);
-    box-shadow: 0 4px 4px 0 var(--grey);
+    box-shadow: 0 4px 4px 0 var(--box-shadow);
     transition: 0.3s;
     border-radius: 20px;
-    padding:0;
-    margin-left: 2px;
+    padding: 0;
 }
 
 .img_h3 h3 {
