--- a/CSS/style_mobile.css
+++ b/CSS/style_mobile.css
@@ -1,7 +1,10 @@
 @media screen and (max-width: 768px) {
+
     body {
         margin: 10px 0px 0px 0px;
     }
+
+    /**Header**/
 
     .container_header {
         display: block;
@@ -13,11 +16,7 @@
     }
 
     nav {
-        height : 150px; 
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
     }
     nav ul {
         width: 100%;
@@ -26,8 +25,6 @@
     }
     nav ul li {
         display: flex;
-        justify-content: space-between;
-        flex-direction: column;
     }
 
     nav ul li a:hover {
@@ -37,16 +34,17 @@
     }
 
     header {
-        margin: 10px;
+        margin: 15px;
     }
-     
+    
+    /**Header Recherche**/
+
     .button {
         display: none;
     }
     
     form {
         display: flex;
-        justify-content: center;
     }
 
     .fa-magnifying-glass {
@@ -60,33 +58,117 @@
         display: inline;
     }  
     
+    /**Header_Filtres**/
+
     .container {
+        flex-direction: column;
+        pointer-events: none;
+    }
+
+    /**Populaires et hébergements**/
+    
+    .container_section_aside {
         display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        flex-wrap: wrap;
-        column-gap: 20px;
+        flex-direction: column-reverse;
     }
 
-    .container h2 {
-        display: block/*  */;
-    }
-    
-    .filtres_1 .filtres_2 {
+    .container_populaires {
+        margin: auto;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-right: 16px;
+        flex-wrap: nowrap;
+        flex-direction: column;
     }
 
-    .filtre_1 {
-        
+    .container_card2 {
+        flex-direction: column;
     }
 
-   
-    
-    
-   
+    .title_populaires {
+        margin: auto;
+    }
 
+    .title_populaires h2 {
+        margin-right: 118px;
+    }
+
+    .card2 {
+        margin: 15px auto;
+        width: 335px;
+    }
     
-}
+    .section_hebergements {
+        display: flex;
+        background-color: white;
+        border-radius: 20px;
+        margin: auto;
+    }
+
+    .section_hebergements h2{
+        padding: 0px;
+    }
+    
+    .container_hebergements {
+        margin-bottom: 20px;
+    }
+
+    .container_card {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+    
+    .card {
+        width: 335px;
+        height: 180px;
+    }
+
+    .card img {
+        width: 328px;
+    }
+
+    .afficher {
+        display: none;
+    }
+
+    /**Activités à Marseille**/
+
+    .activites_a_marseille {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: auto;
+    }
+
+    .images {
+        flex-direction: column;
+        flex-wrap: nowrap;  
+        margin: auto;
+        margin-bottom: 32px;
+    }
+
+    .main_activites h2 {
+        margin: auto;
+    }
+
+    .img_h3{
+        height: 210px;
+        width: 335px;
+        margin: 15px;
+    }
+
+    .images .img_h3 img {
+        width: 335px;
+        height: 157px; 
+    }
+
+    /**Footer**/
+    
+    .footer_container {
+        flex-wrap: nowrap;
+        flex-direction: column;
+
+    }
+
+    .footer_colums {
+        padding: 0px;
+    }
+  }
