--- a/CSS/style_mobile.css
+++ b/CSS/style_mobile.css
@@ -18,11 +18,13 @@
     nav {
         display: flex;
     }
+
     nav ul {
         width: 100%;
         justify-content: center;
         padding: 0px;
     }
+
     nav ul li {
         display: flex;
     }
@@ -60,10 +62,15 @@
         justify-content: center;
     }  
     
-    /**Header_Filtres**/
+    /**Header Filtres**/
 
-    .filtres {
-        display: inline-block
+    .container .filtres {
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .container .filtres1 {
+        cursor: none;
     }
     
     /**Populaires et hébergements**/
