--- a/CSS/style_tablet.css
+++ b/CSS/style_tablet.css
@@ -29,6 +29,8 @@ body {
     padding: 30px 0px 0px 29px;
 }
 
+/**Responsive Tablettes**/ 
+
 .container_card {
     margin: 20px;
 }
@@ -69,7 +71,7 @@ aside img {
 /**Activités à Marseille**/
     
 .activites_a_marseille {
-        margin: 74px 0px 55px 0px;
+    margin: 74px 0px 55px 0px;
 }
 
 .images {
